# actor-framework-experiments

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  config.json  const.h  docker-compose.yml  main.cpp  main.h
_data/consul/: checkpoint-signature  node-id
_data/consul/raft/: raft.db
_data/consul/serf/: local.snapshot  remote.snapshot
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
src/: CMakeLists.txt
src/impl/: GameLoop.cpp  GameLoop.h
src/impl/actors/: ActorGroupManager.cpp  ActorGroupManager.h
src/impl/configuration/: ConfigurationAdapter.cpp  ConfigurationAdapter.h  ConsulConfiguration.cpp  ConsulConfiguration.h  EnvConfiguration.cpp  EnvConfiguration.h  IConfiguration.h  JsonConfiguration.cpp  JsonConfiguration.h
src/impl/game/: GameController.cpp  GameController.h  GameControllerActor.cpp  GameControllerActor.h
src/impl/game/board/: BoardController.cpp  BoardController.h  BoardControllerActor.cpp  BoardControllerActor.h  BoardRenderer.cpp  BoardRenderer.h
src/impl/game/pieces/: PieceController.cpp  PieceController.h  PieceControllerActor.cpp  PieceControllerActor.h  PieceRenderer.cpp  PieceRenderer.h
src/impl/listeners/: BoardKeyListener.cpp  BoardKeyListener.h  BoardMouseEvent.cpp  BoardMouseEvent.h  GameKeyListener.cpp  GameKeyListener.h  WindowKeyListener.cpp  WindowKeyListener.h
src/impl/loggers/: LoggerAdapter.cpp  LoggerAdapter.h  TextLogger.cpp  TextLogger.h
src/impl/renderer/: GLRenderer.cpp  GLRenderer.h  GLRendererActor.cpp  GLRendererActor.h  RenderCounter.cpp  RenderCounter.h  linmath.h
src/impl/windows/: GlfwWindow.cpp  GlfwWindow.h  GlfwWindowController.cpp  GlfwWindowController.h  MockWindow.cpp  MockWindow.h
src/interfaces/: CommonActorAtoms.h  IActorGroupManager.h  IActorWrapper.h  IBoard.h  IBoardController.h  IConfigurationLoader.h  IGameController.h  IKeyEventListener.h  ILogger.h  IMouseEventListener.h  IPieceController.h  IRenderCounter.h  IRenderer.h  IShape.h  ISignalsController.h  IWindow.h  IWindowController.h  IWindowLoop.h  primitives.h
src/models/: Board.cpp  Board.h  Piece.cpp  Piece.h
tests/: CMakeLists.txt
